[package]
name = "awesome_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.19.9"

[dependencies]
pest = "2.5.7"
pest_derive = "2.5.7"
lazy_static = "1.4.0"
lalrpop-util = {version = "0.19.9", features = ["lexer"]}
regex = "1.7.3"
